<resources>
  <string name="app_name">Amber Movie</string>
  <string name="app_description">Discover New Movies &amp; TV Shows</string>
  
  <string name="title_tab_movie">Movie</string>
  <string name="title_tab_tv">TV Show</string>
  <string name="title_setting">Setting</string>
  <string name="title_prefs_lang">Language</string>
  <string name="title_prefs_category_general">General</string>
  <string name="title_prefs_category_notification">Notification</string>
  <string name="title_prefs_category_user_control">User Control</string>
  <string name="title_prefs_daily_reminder">Daily reminder</string>
  <string name="title_prefs_release_today">Release today</string>
  <string name="title_prefs_restricted_mode">Restricted mode</string>
  <string name="title_prefs_more_notification">More notification settings</string>
  <string name="title_movie_discover">Discover</string>
  <string name="title_movie_favorite">Favorite</string>
  <string name="title_others">Others</string>
  
  <string name="desc_poster_image">Poster image</string>
  <string name="desc_backdrop_image">Backdrop image</string>
  <string name="desc_prefs_lang">Select app language</string>
  <string name="desc_prefs_daily_reminder">Remind you to always get updates every morning</string>
  <string name="desc_prefs_release_today">Notice about today\'s latest release</string>
  <string name="desc_prefs_restricted_mode">This helps hide potentially mature movies</string>
  <string name="desc_prefs_more_notification">Configure system notification for this app</string>
  <string name="desc_drawer_close">Close navigation drawer</string>
  <string name="desc_drawer_open">Open  navigation drawer</string>
  <string name="desc_daily_reminder_notification_text">Do you miss me? Check me out!</string>
  
  <string name="action_settings">Settings</string>
  <string name="action_cancel">Cancel</string>
  <string name="action_search">Search</string>
  <string name="action_favorite">Favorite</string>
  <string name="action_favorite_added">Remove favorite</string>
  <string name="action_search_hint_movie">Search movie…</string>
  <string name="action_search_hint_tv">Search tv show…</string>
  
  <string name="error_unknown">Something went wrong!</string>
  
  <string name="msg_confirm_close">Press again to close app</string>
  <string name="msg_playing_trailer">Playing trailer…</string>
  <string name="msg_loading">Loading…</string>
  <string name="msg_failed_fetch_movies">Failed to fetch movies data from server!</string>
  <string name="msg_no_movie">No movies data!</string>
  <string name="msg_failed_fetch_genres">Failed to fetch genres</string>
  <string name="msg_no_genre">No genre</string>
  <string name="msg_failed_get_movie_favorite">Failed to load movie favorites</string>
  <string name="msg_no_movie_favorite">Favorite movie empty</string>
  <string name="msg_no_tv_favorite">Favorite TV Show empty</string>
  <string name="msg_add_favorite_fail">Failed add to favorite</string>
  <string name="msg_add_favorite_ok">Added to favorite</string>
  <string name="msg_remove_favorite_fail">Failed to remove favorite</string>
  <string name="msg_remove_favorite_ok">Removed from favorite</string>
  <plurals name="msg_release_today_notification_text">
    <item quantity="one">%d new movie</item>
    <item quantity="other">%d new movies</item>
  </plurals>
  
  <string name="text_heading_overview">Overview</string>
  <string name="text_heading_genres">Genres</string>
  <string name="text_subheading_popularity">Popularity</string>
  <string name="text_heading_facts">Facts</string>
  <string name="text_subheading_vote_count">Vote Count</string>
  <string name="text_subheading_original_language">Original Language</string>
  <string name="text_subheading_original_title">Original Title</string>
  
  <string name="key_prefs_lang" translatable="false">prefs_lang</string>
  <string name="key_prefs_daily_reminder" translatable="false">prefs_daily_reminder</string>
  <string name="key_prefs_release_today" translatable="false">prefs_release_today</string>
  <string name="key_prefs_restricted_mode" translatable="false">prefs_restricted_mode</string>
  <string name="key_prefs_more_notification" translatable="false">prefs_more_notification</string>
  
  <string name="mock_popularity" translatable="false">442.543</string>
  <string name="mock_vote_count" translatable="false">216</string>
  <string name="mock_english" translatable="false">English</string>
  <string name="mock_title" translatable="false">The Fancy Movie Title</string>
  <string name="mock_date" translatable="false">April 27, 2018</string>
  <string name="mock_average_rate" translatable="false">4.2</string>
  <string name="mock_large_text" translatable="false">
    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts."
  </string>
  <string name="appwidget_text" translatable="false">EXAMPLE</string>
  <string name="add_widget" translatable="false">Add widget</string>
</resources>
