<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">
  
  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_main_discover"
      android:icon="@drawable/ic_movie_discover_black_24dp"
      android:title="@string/title_movie_discover" />
    <item
      android:id="@+id/nav_main_favorite"
      android:icon="@drawable/ic_movie_favorite_black_24dp"
      android:title="@string/title_movie_favorite" />
  </group>
  
  <item android:title="@string/title_others">
    <menu>
      <item
        android:id="@+id/nav_main_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />
    </menu>
  </item>

</menu>
