<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/drawer_header_height"
  android:background="@color/colorPrimary"
  android:gravity="bottom|center"
  android:orientation="vertical"
  android:padding="@dimen/component_margin_medium"
  android:theme="@style/ThemeOverlay.AppCompat.Dark">
  
  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/desc_poster_image"
    app:srcCompat="@mipmap/ic_launcher_round" />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:textAlignment="center"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
  
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_description"
    android:textAlignment="center" />

</LinearLayout>
